# zero

./: .env  .env.local.example  .env.test  .gitignore  .prettierrc.json  Dockerfile  README.md  components.json  eslint.config.js  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
data/postgres/: .env  .env.example  01_loads.sql  config.py  domestic_control.sql  pyproject.toml  setup_postgres.py
data/risingwave/: .env  .env.example  .env.local.example  config.py  dbt_project.yml  profiles.yml  pyproject.toml  run_dbt.py
data/risingwave/macros/: gcs_sink.sql  marpower_struct.sql  mqtt_with.sql  sink_append_pg.sql  sink_append_pg_dmc.sql  sink_upsert_pg.sql  sink_upsert_pg_dmc.sql
data/risingwave/seeds/: risingwave.sql
zero-data/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  components.schema.json  components.yaml  docker-compose.yaml  pyproject.toml
zero-data/.github/workflows/: ci.yaml  pr.yaml  release.yaml  zero-data-gen-helm.yaml  zero-data-helm.yaml  zero-dbt-gen-helm.yaml  zero-dbt-helm.yaml
zero-data/charts/data_gen/: Chart.yaml  values.yaml
zero-data/charts/dbt_gen/: Chart.yaml  values.yaml
zero-data/charts/zero_data/: Chart.yaml  values.yaml
zero-data/dbt/: dbt_project.yml  profiles.yml
zero-data/dbt/macros/: mqtt_with.sql  sink_append_gcs.sql
zero-data/dbt/seeds/: io_metadata.csv  io_metadata_marpower.csv  power_tag_metadata.csv  powertag_metadata.csv
zero-data/io-processing/: README.md  docker-compose.yaml  process.ipynb  pyproject.toml
zero-data/io-processing/io_processing/: __main__.py  components.py  generated_components.py  io_list.py
zero-data/io_lists/: 52422003_3210_AMCS IO-List R2.1.xlsx  52422003_3210_AMCS IO-List R2.5.xlsx  52422003_3210_AMCS IO-List R2.6.xlsx  52422003_3210_AMCS IO-List R2.9 - powertags fix.xlsx
zero-data/io_lists/hydraulic-plc/: 9428051-4 Sail PLC cable list.xlsx
zero-data/io_lists/test/: marpower_test.xlsx
zero-data/notebooks/: explore_io_list.ipynb  mqtt_test.py  process.ipynb
zero-data/output/: note.txt
zero-data/src/io_processing/: __main__.py  components.py  config.py  generated_components.py  io_list.py  logging.py  main.py  marpower.py
zero-data/src/zero_data/: __main__.py  config.py  main.py
zero-data/tests/: conftest.py  io_list.py  test_config.py
zero-data/tests/data_gen/: test_generator.py
zero-data/tests/generator/: test_amcs_field_map.py  test_io_metadata.py  test_marpower_raw.py
zero-data/tests/io_list/: test_marpower.py
zero-data/tests/sql/: test_pika.py
zero-domestic-control/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
zero-domestic-control/.github/workflows/: ci.yaml  helm.yaml  pr.yaml  release.yaml
zero-domestic-control/charts/zero-domestic-control/: Chart.yaml  values.yaml
zero-domestic-control/data/: .user.yml  profiles.yml  run_dbt.py
zero-domestic-control/data/macros/: mqtt_with.sql  sink_append_pg.sql  sink_upsert_pg.sql
zero-domestic-control/data/risingwave/: .user.yml  dbt_project.yml  profiles.yml
zero-domestic-control/hass/: configuration.yaml  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal  scripts.yaml
zero-domestic-control/hass/.storage/: auth  core.area_registry  core.device_registry  core.entity_registry  core.restore_state  hacs.data  hacs.repositories  homeassistant.exposed_entities  http  http.auth  input_number  repairs.issue_registry
zero-domestic-control/hasura/metadata/: remote_schemas.yaml
zero-domestic-control/tests/: conftest.py  test_config.py
zero-domestic-control/tests/integration/: test_ac.py  test_av.py  test_graphql.py  test_hass_roundtrip.py
zero-domestic-control/tests/unit/: test_config.py  test_mqtt.py  test_util.py
zero-domestic-control/typings/pyModbusTCP/: __init__.pyi  client.pyi  constants.pyi  server.pyi  utils.pyi
zero-domestic-control/volumes/hass/: automations.yaml  configuration.yaml  home-assistant.log.1  home-assistant_v2.db  home-assistant_v2.db-shm  home-assistant_v2.db-wal  (+1 more)
zero-domestic-control/zero_domestic_control/: __main__.py  app.py  av.py  config.py  control.py  hass.py  messages.py  mqtt.py  postgres.sql  risingwave.sql  util.py
zero-hull-temperature/: README.md  docker-compose.yml  pyproject.toml
zero-hull-temperature/docs/: 3094 Hull Temperature Sensors Configuration manual_R1.docx
zero-hull-temperature/tests/: test_bit_ops.py  test_cli.py  test_reader.py
zero-hull-temperature/zero_hull_temperature/: __main__.py  addresses.py  bit_ops.py  cli.py  mqtt.py  reader.py  settings.py  stub.py
zero-loads-app/: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
zero-loads-app/tests/: test_adapter.py  test_can_adapter.py
zero-mast-deformation/: Cargo.toml  README.md  fbgs.yaml
zero-mast-deformation/sample_code/: README.md  getmultiplespectrumplot.py  getspectrumandpeaksplot.py  networkconfiguration.py  peak_streaming.py  pyproject.toml  simpleconsole.py  spectrum_streaming.py
zero-mast-deformation/src/: client.rs  main.rs  msg.rs  stub.rs
zero-thrs-control/: .env  .gitignore  LICENSE  README.md  Readme.md  control_test.ipynb  docker-compose.yml  generateFMU.mos  pyproject.toml
zero-thrs-control/.devcontainer/: devcontainer.json  requirements.txt  script.sh
zero-thrs-control/analysis/: analysis_utils.py  consumers.ipynb  flowbasedcontrol.ipynb  flowbasedcontrolbyvalve.ipynb  high_temperature.ipynb  paper_figures.ipynb  pcm.ipynb  pvt.ipynb  pvt_test_debug.ipynb  thrusters.ipynb  thrusters_plot.py  thrusters_test_debug.ipynb  thrusters_testing.ipynb
zero-thrs-control/control/: controllers.py
zero-thrs-control/input_output/: base.py  control.py  fmu_mapping.py  model_builder.py  sensor.py  simulation.py  units.py
zero-thrs-control/io/: model_builder.py  sensor.py  units.py
zero-thrs-control/simulation/: collector.py  environmentals.py  executor.py  fmu.py  input_output.py
zero-thrs-control/tests/: conftest.py  test_fmu.py
(+942 files in other folders)
