[project]
name = "zero-hull-temperature"
version = "0.1.0"
description = ""
authors = [
    {name = "Boudewijn van Groos", email = "boudewijn.vangroos@foundationzero.org"}
]
readme = "README.md"
packages = [{ include = "zero_hull_temperature"}]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pymodbustcp (>=0.3.0,<0.4.0)",
    "aiomqtt (>=2.4.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "jsonpath-ng (>=1.7.0,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)"
]

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^1.1.0"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pyright = "^1.1.403"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
