[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Dustin van Weersel", email = "dustin.vanweersel@foundationzero.org>" }
]
readme = "README.md"
packages = [{ include = "backend", from = "src" }]
requires-python = ">= 3.13.1,<4.0"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "strawberry-graphql[debug-server, fastapi] (>=0.256.1,<0.257.0)",
    "psycopg[binary] (>=3.2.3,<4.0.0)",
    "homeassistant-api (>=5.0.0,<6.0.0)",
    "python-can (>=4.6.1,<5.0.0)",
    "construct (>=2.10.70,<3.0.0)",
    "aiomqtt (>=2.4.0,<3.0.0)",
    "dbt-risingwave (>=1.9.2,<2.0.0)",
    "dbt-core (>=1.9.8,<2.0.0)"
]

[project.scripts]
backend = "backend.__main__:run"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
ruff = "^0.9.5"
python-dotenv = "^1.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
pytest-env = "^1.1.5"
httpx = "^0.28.1"
pytest-timeout = "^2.3.1"
pytest-mock = "^3.14.0"

[tool.mypy]
plugins = "pydantic.mypy,strawberry.ext.mypy_plugin"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
# Needs to be included for Ruff to read required-version

[tool.dotenv]
location = ".env"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

