[package]
name = "zero-mast-deformation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
async-stream = "0.3.6"
binrw = "0.15.0"
circular = "0.3.0"
clap = { version = "4.5.45", features = ["derive", "env"] }
config = "0.15.14"
env_logger = "0.11.8"
futures = "0.3.31"
futures-rx = "0.2.1"
log = "0.4.27"
nom = "8.0.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
socket2 = "0.6.0"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.16"
