[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["Alje van Dam <alje.vandam@foundationzero.org>", "Boudewijn van Groos <boudewijn.vangroos@foundationzero.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
pydantic = "^2.10.4"
fmpy = "^0.3.22"
jupyter = "^1.1.1"
pyside6 = "^6.8.1.1"
pyqtgraph = "^0.13.7"
plotly = "^5.24.1"
matplotlib = "^3.10.0"
polars = "^1.24.0"
simple-pid = "^2.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pyright = "^1.1.392.post0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
