[tool.poetry]
name = "simulation"
version = "0.1.0"
description = ""
authors = ["Alje van Dam <alje.vandam@foundationzero.org>", "Boudewijn van Groos <boudewijn.vangroos@foundationzero.org>"]
packages = [
  { include = "control", from = "src" },
  { include = "input_output", from = "src" },
  { include = "orchestration", from = "src" },
  { include = "simulation", from = "src" },
  { include = "classes", from = "src" },
  { include = "utils", from = "src" },
  { include = "analysis" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.14"
pydantic = "2.10.6"
fmpy = "^0.3.22"
jupyter = "^1.1.1"
pyside6 = "^6.8.1.1"
pyqtgraph = "^0.13.7"
plotly = "^5.24.1"
matplotlib = "^3.10.0"
polars = "^1.24.0"
simple-pid = "^2.0.1"
aiomqtt = "^2.3.0"
pydantic-settings = "^2.8.1"
pytransitions = "^0.9.2"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
seaborn = "^0.13.2"
pytest-xdist = "^3.6.1"
pydantic-partial = "^0.8.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pyright = "^1.1.392.post0"
pytest-asyncio = "^0.25.3"
pytest-timeout = "^2.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"
pygraphviz = "^1.14"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
