[project]
name = "hyperion"
version = "0.1.0"
description = ""
authors = [
    {name = "Boudewijn van Groos",email = "boudewijn.vangroos@foundationzero.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
